--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <meta name="viewport" content="width=device-width" initial-scale="1">
     </head>
     <body>
-        
+        <h1>Path to Success</h1>
+        <p>Unlock your Full Potential with Personalized Life Coaching</p>
     </body>
 
 </html>
