--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <body>
         <h1>Path to Success</h1>
         <p>Unlock your Full Potential with Personalized Life Coaching</p>
-    </body>
+        <nav class="nav">
+            <ul>
+                <li><a href="#">Our Services</a></li>
+                <li><a href="#">Why Choose Us</a></li>
+            </ul>
+        </nav>
 
+
+    </body>
 </html>
