--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <ul>
                 <li><a href="#">Our Services</a></li>
                 <li><a href="#">Why Choose Us</a></li>
+                <li><a href="#">Prices</a></li>
+                <li><a href="#">Take the First Step</a></li>
             </ul>
         </nav>
 
