--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>Path to Success</h1>
         <p>Unlock your Full Potential with Personalized Life Coaching</p>
         <nav class="nav">
+            <h2>Menu</h2>
             <ul>
                 <li><a href="#">Our Services</a></li>
                 <li><a href="#">Why Choose Us</a></li>
