--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
         <meta name="viewport" content="width=device-width" initial-scale="1">
     </head>
     <body>
-        <h1>Path to Success</h1>
-        <p>Unlock your Full Potential with Personalized Life Coaching</p>
-        <nav class="nav">
-            <h2>Menu</h2>
-            <ul>
-                <li><a href="#">Our Services</a></li>
-                <li><a href="#">Why Choose Us</a></li>
-                <li><a href="#">Prices</a></li>
-                <li><a href="#">Take the First Step</a></li>
-            </ul>
-        </nav>
+        <header class="header">
+            <h1>Path to Success</h1>
+            <p>Unlock your Full Potential with Personalized Life Coaching</p>
+            <nav class="nav">
+                <h2>Menu</h2>
+                <ul>
+                    <li><a href="#">Our Services</a></li>
+                    <li><a href="#">Why Choose Us</a></li>
+                    <li><a href="#">Prices</a></li>
+                    <li><a href="#">Take the First Step</a></li>
+                </ul>
+            </nav>
+        </header>
 
-
+        <h2>Our Services</h2>
+        <h3>One-On-One Coaching</h3>
     </body>
 </html>
