--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
         </header>
 
-        <h2>Our Services</h2>
+        <h2 class="services">Our Services</h2>
         <h3>One-On-One Coaching</h3>
     </body>
 </html>
