--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
 
         <h2 class="services">Our Services</h2>
         <h3>One-On-One Coaching</h3>
+        <img src="../PathToSuccess/PTS-Images/personaldevelopment.png" alt="teal icon of a smiling face">
     </body>
 </html>
