--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
         <h3>One-On-One Coaching</h3>
         <img src="PTS-Images/personal-development.png" alt="teal icon of a smiling face">
 
-        <h4>Personal Development</h4>
-        <p>Identify and overcome obstacles holding you back from living your best life. Whether it's building confidence, breaking bad habits, or discovering your true purpose, we'll work together to create a clear roadmap for success.</p>
+        <div class="personalDevelopment">
+            <h4>Personal Development</h4>
+            <p>Identify and overcome obstacles holding you back from living your best life. Whether it's building confidence, breaking bad habits, or discovering your true purpose, we'll work together to create a clear roadmap for success.</p>
+        </div>
+
+        <img src="PTS-Images/career-coaching.png" alt="lavendar icon of a briefcase">
+        <div class="careerCoaching">
+            <h4>Career Coaching</h4>
+            <p>Feeling stuck in your career? We'll help you clarify your goals, develop a plan for advancement, and build the skills needed to thrive in your professional life.</p>
+        </div>
     </body>
 </html>
