--- a/index.html
+++ b/index.html
@@ -35,5 +35,11 @@
             <h4>Career Coaching</h4>
             <p>Feeling stuck in your career? We'll help you clarify your goals, develop a plan for advancement, and build the skills needed to thrive in your professional life.</p>
         </div>
+
+        <img src="PTS-Images/relationship-coaching.png" alt="pink icon of a heart">
+        <div class="relationshipCoaching">
+            <h4>Relationship Coaching</h4>
+            <p>Enhance your relationships with better communication, understanding, and empathy. Whether it's family, friends, or partners, we'll help you build stronger connections.</p>
+        </div>
     </body>
 </html>
