--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </header>
 
         <h2 class="services">Our Services</h2>
+
         <h3>One-On-One Coaching</h3>
         <img src="PTS-Images/personal-development.png" alt="teal icon of a smiling face">
 
@@ -40,6 +41,36 @@
         <div class="relationshipCoaching">
             <h4>Relationship Coaching</h4>
             <p>Enhance your relationships with better communication, understanding, and empathy. Whether it's family, friends, or partners, we'll help you build stronger connections.</p>
+        </div>
+
+        <h3>Group Coaching</h3>
+
+        <img src="PTS-Images/supportive-community.png" alt="yellow icon of hands clasping">
+        <div class="SupportiveCoaching">
+            <h4>Supportive Coaching</h4>
+            <p>Joing a group of like-minded individuals on a similar journey. Share experiences, gain insights, and grow together in a safe, supportive environment.</p>
+        </div>
+
+        <img src="PTS-Images/focused-session.png" alt="teal icon of a clock face">
+        <div class="focusedSessions">
+            <h4>Focused Sessions</h4>
+            <p>Our group coaching sessions focus on specific themes such as confidence-building, time management, or work-life balance. Each sessions is designed to provide actionable takeaways that you can apply immediately.</p>
+        </div>
+
+        <h3>Workshops & Seminars</h3>
+
+        <img src="PTS-Images/interactive-learning.png" alt="lavendar icon of text conversation">
+        <div class="interactiveLearning">
+            <h4>Interactive learning</h4>
+            <p>Participate in our interactive workshops and seminars that cover a range of topics, from goal setting to stress management. These events are designed to provide practical tools and strategies that you can implement in your daily life</p>
+        </div>
+        
+        <h3>Online Courses</h3>
+
+        <img src="PTS-Images/flexible-learning.png" alt="pink icon of a curly arrow">
+        <div class="flexibleLearning">
+            <h4>Flexible Learning</h4>
+            <p>Access our online courses at your convenience. With video lessons, downloadable resources, and exercises, you can learn at your own pace from the comfort of your home.</p>
         </div>
     </body>
 </html>
