--- a/index.html
+++ b/index.html
@@ -72,5 +72,45 @@
             <h4>Flexible Learning</h4>
             <p>Access our online courses at your convenience. With video lessons, downloadable resources, and exercises, you can learn at your own pace from the comfort of your home.</p>
         </div>
+
+        <h2>Why Choose Us</h2>
+        <ul>
+            <li>Personalized Approach</li>
+            <li>Proven Results</li>
+            <li>Supportive Environment</li>
+            <li>Flexible Options</li>
+        </ul>
+
+        <h2>Pricing</h2>
+        <h3>One-on-One Coaching</h3>
+        <table>
+            <!-- FILL OUT SOON -->
+        </table>
+
+        <h3>Group Coaching</h3>
+        <table>
+            <!-- FILL OUT SOON -->
+        </table>
+
+        <h3>Workshops & Seminars</h3>
+        <table>
+            <!-- FILL OUT SOON -->
+        </table>
+
+        <h3>Online Courses</h3>
+        <table>
+            <!-- FILL OUT SOON -->
+        </table>
+
+
+        <h2>Take the First Step Today</h2>
+        <p>Your journey to a more fulfilling life begins with a single step. Book a free 30-minute consultation today to discover how our coaching services can help you achieve your goals. Let's work together to create the life you've always dreamed of!</p>
+
+        <a href="#">Schedule Now</a>
+
+        <footer>
+            <p>Copyright 2024</p>
+            <a href="#">Terms and Conditions</a>
+        </footer>
     </body>
 </html>
