--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Path to Success</title>
         <meta charset="UTF-8">
-        <link href="../PathToSuccess/styles.css" rel="stylesheet" type="text.css">
+        <link href="../PathToSuccess/styles.css" rel="stylesheet" alt="text.css">
         <meta name="viewport" content="width=device-width" initial-scale="1">
     </head>
     <body>
