--- a/index.html
+++ b/index.html
@@ -21,87 +21,142 @@
             </nav>
         </header>
 
-        <h2 class="services">Our Services</h2>
-
+        <div class="ourServices">
+        <h2>Our Services</h2>
         <h3>One-On-One Coaching</h3>
-        <img src="PTS-Images/personal-development.png" alt="teal icon of a smiling face">
+            <img src="PTS-Images/personal-development.png" alt="teal icon of a smiling face">
 
-        <div class="personalDevelopment">
-            <h4>Personal Development</h4>
-            <p>Identify and overcome obstacles holding you back from living your best life. Whether it's building confidence, breaking bad habits, or discovering your true purpose, we'll work together to create a clear roadmap for success.</p>
+            <div class="personalDevelopment">
+                <h4>Personal Development</h4>
+                <p>Identify and overcome obstacles holding you back from living your best life. Whether it's building confidence, breaking bad habits, or discovering your true purpose, we'll work together to create a clear roadmap for success.</p>
+            </div>
+
+            <img src="PTS-Images/career-coaching.png" alt="lavendar icon of a briefcase">
+            <div class="careerCoaching">
+                <h4>Career Coaching</h4>
+                <p>Feeling stuck in your career? We'll help you clarify your goals, develop a plan for advancement, and build the skills needed to thrive in your professional life.</p>
+            </div>
+
+            <img src="PTS-Images/relationship-coaching.png" alt="pink icon of a heart">
+            <div class="relationshipCoaching">
+                <h4>Relationship Coaching</h4>
+                <p>Enhance your relationships with better communication, understanding, and empathy. Whether it's family, friends, or partners, we'll help you build stronger connections.</p>
+            </div>
         </div>
 
-        <img src="PTS-Images/career-coaching.png" alt="lavendar icon of a briefcase">
-        <div class="careerCoaching">
-            <h4>Career Coaching</h4>
-            <p>Feeling stuck in your career? We'll help you clarify your goals, develop a plan for advancement, and build the skills needed to thrive in your professional life.</p>
+        <div class="groupCoaching">
+            <h3>Group Coaching</h3>
+            <img src="PTS-Images/supportive-community.png" alt="yellow icon of hands clasping">
+            <div class="SupportiveCoaching">
+                <h4>Supportive Coaching</h4>
+                <p>Joing a group of like-minded individuals on a similar journey. Share experiences, gain insights, and grow together in a safe, supportive environment.</p>
+            </div>
+
+            <img src="PTS-Images/focused-session.png" alt="teal icon of a clock face">
+            <div class="focusedSessions">
+                <h4>Focused Sessions</h4>
+                <p>Our group coaching sessions focus on specific themes such as confidence-building, time management, or work-life balance. Each sessions is designed to provide actionable takeaways that you can apply immediately.</p>
+            </div>
         </div>
 
-        <img src="PTS-Images/relationship-coaching.png" alt="pink icon of a heart">
-        <div class="relationshipCoaching">
-            <h4>Relationship Coaching</h4>
-            <p>Enhance your relationships with better communication, understanding, and empathy. Whether it's family, friends, or partners, we'll help you build stronger connections.</p>
-        </div>
-
-        <h3>Group Coaching</h3>
-
-        <img src="PTS-Images/supportive-community.png" alt="yellow icon of hands clasping">
-        <div class="SupportiveCoaching">
-            <h4>Supportive Coaching</h4>
-            <p>Joing a group of like-minded individuals on a similar journey. Share experiences, gain insights, and grow together in a safe, supportive environment.</p>
-        </div>
-
-        <img src="PTS-Images/focused-session.png" alt="teal icon of a clock face">
-        <div class="focusedSessions">
-            <h4>Focused Sessions</h4>
-            <p>Our group coaching sessions focus on specific themes such as confidence-building, time management, or work-life balance. Each sessions is designed to provide actionable takeaways that you can apply immediately.</p>
-        </div>
-
-        <h3>Workshops & Seminars</h3>
-
-        <img src="PTS-Images/interactive-learning.png" alt="lavendar icon of text conversation">
-        <div class="interactiveLearning">
-            <h4>Interactive learning</h4>
-            <p>Participate in our interactive workshops and seminars that cover a range of topics, from goal setting to stress management. These events are designed to provide practical tools and strategies that you can implement in your daily life</p>
+        <div class="workshopsSeminars">
+            <h3>Workshops & Seminars</h3>
+            <img src="PTS-Images/interactive-learning.png" alt="lavendar icon of text conversation">
+            <div class="interactiveLearning">
+                <h4>Interactive learning</h4>
+                <p>Participate in our interactive workshops and seminars that cover a range of topics, from goal setting to stress management. These events are designed to provide practical tools and strategies that you can implement in your daily life</p>
+            </div>
         </div>
         
-        <h3>Online Courses</h3>
-
-        <img src="PTS-Images/flexible-learning.png" alt="pink icon of a curly arrow">
-        <div class="flexibleLearning">
-            <h4>Flexible Learning</h4>
-            <p>Access our online courses at your convenience. With video lessons, downloadable resources, and exercises, you can learn at your own pace from the comfort of your home.</p>
+        <div class="onlineCourses">
+            <h3>Online Courses</h3>
+            <img src="PTS-Images/flexible-learning.png" alt="pink icon of a curly arrow">
+            <div class="flexibleLearning">
+                <h4>Flexible Learning</h4>
+                <p>Access our online courses at your convenience. With video lessons, downloadable resources, and exercises, you can learn at your own pace from the comfort of your home.</p>
+            </div>
         </div>
 
-        <h2>Why Choose Us</h2>
-        <ul>
-            <li>Personalized Approach</li>
-            <li>Proven Results</li>
-            <li>Supportive Environment</li>
-            <li>Flexible Options</li>
-        </ul>
+        <div class="whyChoose">
+            <h2>Why Choose Us</h2>
+            <ul>
+                <li>Personalized Approach</li>
+                <li>Proven Results</li>
+                <li>Supportive Environment</li>
+                <li>Flexible Options</li>
+            </ul>
+        </div>
 
-        <h2>Pricing</h2>
-        <h3>One-on-One Coaching</h3>
-        <table>
-            <!-- FILL OUT SOON -->
-        </table>
+        <div class="pricing">
+            <h2>Pricing</h2>
+            <h3>One-on-One Coaching</h3>
+            <table>
+                <tr>
+                    <th>Service</th>
+                    <th>Cost</th>
+                </tr>
+                <tr>
+                    <td>Single Session</td>
+                    <td>$150</td>
+                </tr>
+                <tr>
+                    <td>Monthly Package</td>
+                    <td>$550</td>
+                </tr>
+                <tr>
+                    <td>3-month Package</td>
+                    <td>$1500</td>
+                </tr>
+            </table>
 
-        <h3>Group Coaching</h3>
-        <table>
-            <!-- FILL OUT SOON -->
-        </table>
+            <h3>Group Coaching</h3>
+            <table>
+                <tr>
+                    <th>Service</th>
+                    <th>Cost</th>
+                </tr>
+                <tr>
+                    <td>Single Session</td>
+                    <td>$75</td>
+                </tr>
+                <tr>
+                    <td>Monthly Package</td>
+                    <td>$250</td>
+                </tr>
+            </table>
 
-        <h3>Workshops & Seminars</h3>
-        <table>
-            <!-- FILL OUT SOON -->
-        </table>
+            <h3>Workshops & Seminars</h3>
+            <table>
+                <tr>
+                    <th>Service</th>
+                    <th>Cost</th>
+                </tr>
+                <tr>
+                    <td>Single Workshop</td>
+                    <td>$150</td>
+                </tr>
+                <tr>
+                    <td>Seminar Series</td>
+                    <td>$250</td>
+                </tr>
+            </table>
 
-        <h3>Online Courses</h3>
-        <table>
-            <!-- FILL OUT SOON -->
-        </table>
-
+            <h3>Online Courses</h3>
+            <table>
+                <tr>
+                    <th>Service</th>
+                    <th>Cost</th>
+                </tr>
+                <tr>
+                    <th>Single Workshop</th>
+                    <th>$150</th>
+                </tr>
+                <tr>
+                    <td>Webinar Series</td>
+                    <td>$250</td>
+                </tr>
+            </table>
+        </div>
 
         <h2>Take the First Step Today</h2>
         <p>Your journey to a more fulfilling life begins with a single step. Book a free 30-minute consultation today to discover how our coaching services can help you achieve your goals. Let's work together to create the life you've always dreamed of!</p>
