--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                     <th>Cost</th>
                 </tr>
                 <tr>
-                    <th>Single Workshop</th>
-                    <th>$150</th>
+                    <td>Single Workshop</td>
+                    <td>$150</td>
                 </tr>
                 <tr>
                     <td>Webinar Series</td>
