--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         <div class="whyChoose">
             <h2>Why Choose Us</h2>
             <ul>
-                <li>Personalized Approach</li>
-                <li>Proven Results</li>
-                <li>Supportive Environment</li>
-                <li>Flexible Options</li>
+                <li class="one">Personalized Approach</li>
+                <li class="two">Proven Results</li>
+                <li class="three">Supportive Environment</li>
+                <li class="four">Flexible Options</li>
             </ul>
         </div>
 
