--- a/index.html
+++ b/index.html
@@ -157,11 +157,13 @@
             </table>
         </div>
 
+        <div class="firstSteps">
         <h2>Take the First Step Today</h2>
         <p>Your journey to a more fulfilling life begins with a single step. Book a free 30-minute consultation today to discover how our coaching services can help you achieve your goals. Let's work together to create the life you've always dreamed of!</p>
 
         <a href="#">Schedule Now</a>
-
+        </div>
+        
         <footer>
             <p>Copyright 2024</p>
             <a href="#">Terms and Conditions</a>
