--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <nav class="nav">
                 <h2>Menu</h2>
                 <ul>
-                    <li><a href="#">Our Services</a></li>
-                    <li><a href="#">Why Choose Us</a></li>
-                    <li><a href="#">Prices</a></li>
-                    <li><a href="#">Take the First Step</a></li>
+                    <li><a href="#" title="Our Services">Our Services</a></li>
+                    <li><a href="#" title="Our Services">Why Choose Us</a></li>
+                    <li><a href="#" title="Our Services">Prices</a></li>
+                    <li><a href="#" title="Our Services">Take the First Step</a></li>
                 </ul>
             </nav>
         </header>
