--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="pricing">
             <h2>Pricing</h2>
             <h3>One-on-One Coaching</h3>
-            <table>
+            <table class="table">
                 <tr>
                     <th>Service</th>
                     <th>Cost</th>
@@ -109,7 +109,7 @@
             </table>
 
             <h3>Group Coaching</h3>
-            <table>
+            <table class="table">
                 <tr>
                     <th>Service</th>
                     <th>Cost</th>
@@ -125,7 +125,7 @@
             </table>
 
             <h3>Workshops & Seminars</h3>
-            <table>
+            <table class="table">
                 <tr>
                     <th>Service</th>
                     <th>Cost</th>
@@ -141,7 +141,7 @@
             </table>
 
             <h3>Online Courses</h3>
-            <table>
+            <table class="table">
                 <tr>
                     <th>Service</th>
                     <th>Cost</th>
