--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
         </div>
 
         <div class="groupCoaching">
+
             <h3>Group Coaching</h3>
             
-            <div class="SupportiveCoaching">
+            <div class="supportiveCoaching">
                 <img src="PTS-Images/supportive-community.png" alt="yellow icon of hands clasping">
                 <h4>Supportive Coaching</h4>
                 <p>Joing a group of like-minded individuals on a similar journey. Share experiences, gain insights, and grow together in a safe, supportive environment.</p>
