--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <a href="#">Schedule Now</a>
         </div>
         
-        <footer>
+        <footer class="footer">
             <p>Copyright 2024</p>
             <a href="#">Terms and Conditions</a>
         </footer>
